# ai-in-5days-assessment-agent

./: Dockerfile  README.md  agent.py  cloud-run.yaml  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt  run_eval.py
terraform/: main.tf  outputs.tf  variables.tf
